# qt-cv

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoCapture.cpp  videoCapture.h  vision_app
vision_app_autogen/: mocs_compilation.cpp
vision_app_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_videoCapture.cpp  qrc_resources.cpp
vision_app_autogen/include/: ui_mainwindow.h
